<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:background="@color/backgroundCabinet"
tools:context=".MoreActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/more_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:weightSum="3"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_below="@id/view"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/cabinetBtnHeight"
            android:id="@+id/imageButton4"
            android:layout_marginLeft="9dp"
            android:drawableTop="@drawable/contribution"
            android:background="@color/background"
            android:text="@string/invest"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:textColor="#6d6d6d"
            android:textSize="12sp"
            android:fontFamily="@string/font_roboto_regular"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/cabinetBtnHeight"
            android:id="@+id/imageButton5"
            android:drawableTop="@drawable/conclusion"
            android:layout_marginLeft="9dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/vuvod"
            android:background="@color/background"
            android:textColor="#6d6d6d"
            android:textSize="12sp"
            android:fontFamily="@string/font_roboto_regular"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/cabinetBtnHeight"
            android:id="@+id/imageButton6"
            android:drawableTop="@drawable/sattings"
            android:background="@color/background"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/more"
            android:textColor="#6d6d6d"
            android:textSize="12sp"
            android:fontFamily="@string/font_roboto_regular"
            android:textAllCaps="false" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pay_system_fragment_container"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"/>


</RelativeLayout>