<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TI_pay_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">
        <EditText android:id="@+id/input_pay_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:hint="@string/pay_system"
            android:fontFamily="HelveticaNeue-Light"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimery" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TI_pay_system_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/TI_pay_system"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">
        <EditText android:id="@+id/input_pay_system_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/summ"
            android:fontFamily="HelveticaNeue-Light"
            android:textSize="16sp"
            android:textColor="@color/inputTextColor" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_popolnit"
        android:id="@+id/btn_popolnenie_submit"
        android:background="@color/colorAccent"
        android:textColor="@color/btnTextColor"
        android:textColorHighlight="@color/btnTextColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onSubmit"/>

</RelativeLayout>